Modified main layout, added grid.css

--- a/Site/app/Resources/views/default/index.html.twig
+++ b/Site/app/Resources/views/default/index.html.twig
@@ -15,33 +15,28 @@
         <p>Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
     </aside>
     <section id="content">
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
+        <div class="section group">
+            <div class="col span_1_of_3">
+                <h2>Nume idee</h2><span class=".status">ACCEPTAT</span>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
+            </div>
+            <div class="col span_1_of_3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+            </div>
+            <div class="col span_1_of_3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+            </div>
         </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
-        </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
-        </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
-        </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
-        </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
-        </div>
-        <div class="idea">
-            <h2>Facem si noi o groapa?</h2>
-            <p>Da, da facem</p>
+        <div class="section group">
+            <div class="col span_1_of_3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+            </div>
+            <div class="col span_1_of_3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+            </div>
+            <div class="col span_1_of_3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+            </div>
         </div>
     </section>
     <!--       <footer>
