--- a/Site/app/Resources/views/base.html.twig
+++ b/Site/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/grid.css') }}" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
