--- a/Site/app/Resources/views/default/index.html.twig
+++ b/Site/app/Resources/views/default/index.html.twig
@@ -8,23 +8,21 @@
     <header>
         <h1>2 Column Responsive Layout</h1>
     </header>
-    <aside id="sidebar">
-        <h2>2nd Content Area</h2>
-        <p>Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-        <p>Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-    </aside>
-    <section id="content">
+    <section id="main">
         <div class="section group">
             <div class="col span_1_of_3">
-                <h2>Nume idee</h2><span class=".status">ACCEPTAT</span>
+                <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
+                <hr/>
+                <img src="{{ asset('images/success.png') }}"/>
+            </div>
+            <div class="col span_1_of_3">
+                <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
             </div>
             <div class="col span_1_of_3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
-            </div>
-            <div class="col span_1_of_3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus. Praesent ligula orci, tincidunt in ex porttitor, maximus lacinia
+                <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
             </div>
         </div>
         <div class="section group">
