Added Post route

--- a/Site/app/Resources/views/default/index.html.twig
+++ b/Site/app/Resources/views/default/index.html.twig
@@ -13,8 +13,8 @@
             <div class="col span_1_of_3">
                 <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
-                <hr/>
-                <img src="{{ asset('images/success.png') }}"/>
+
+                <img src="{{ asset('images/success.png') }}"/> <span class="score">112</span>
             </div>
             <div class="col span_1_of_3">
                 <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
