--- a/Site/app/Resources/views/default/index.html.twig
+++ b/Site/app/Resources/views/default/index.html.twig
@@ -14,7 +14,7 @@
                 <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id porttitor metus.</p>
 
-                <img src="{{ asset('images/success.png') }}"/> <span class="score">112</span>
+                <div class="bottom"><span class="scor">Scor: <span class="scor_text">112</span></span><span class="follow">Urmarit de: <span class="follow_text">69</span></span></div>
             </div>
             <div class="col span_1_of_3">
                 <h2>Nume idee</h2><span class="status">ACCEPTAT</span>
