--- a/Site/web/css/grid.css
+++ b/Site/web/css/grid.css
@@ -13,32 +13,52 @@
     float:left;
     margin: 1% 0 1% 1%;
 
+    color:white;
+
     border: solid 1px #ccc;
     background: #f0efef;
 
-    height: 120px;
+    background: linear-gradient(
+            rgba(20,20,20, .5),
+            rgba(20,20,20, .5)),
+    url('../images/groapa.jpg');
+
+    height: 150px;
 }
 .col h2{
-    margin: 0px;
+    position: relative;
+    left: 10px;
+    top: 10px;
     font-size: medium;
-    padding-left: 10px;
     float: left;
 }
 
+.col .scor .scor_text{
+    color: #fd2800;
+}
+
+.col .follow .follow_text{
+    color: #fd2800;
+}
+
 .col p{
-    padding-top: 25px;
-    padding-left: 10px;
-    height:60px;
+    padding: 55px 10px 0px 25px;
+    height:65px;
     width: auto;
-    border-bottom: 5px solid red;
+
     margin:0px;
 }
 
-.col img{
-    width: 25px;
-    margin: 2px;
-    display: inline-block;
-    float:left;
+.col .bottom{
+    background: #010b13;
+    padding: 2px 10px 0px 10px;
+    margin: 0px;
+
+    height: 30px;
+}
+
+.col .follow{
+    float: right;
 }
 .col .score{
     vertical-align: middle;
@@ -46,8 +66,10 @@
 }
 
 .col .status{
+    margin-top: 15px;
+    padding: 5px 10px 5px 10px;
     background: #fd2800;
-    color: ;
+    color: #fff5f3;
     display:inline-block;
     float:right;
 }
