--- a/Site/app/Resources/views/base.html.twig
+++ b/Site/app/Resources/views/base.html.twig
@@ -10,6 +10,10 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
         <link rel="stylesheet" href="{{ asset('css/grid.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/menu.css') }}" />
+
+        <script src="{{ asset('js/jquery-3.2.1.min.js') }}"></script>
+        <script src="{{ asset('js/menu.js') }}"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
