--- a/Site/app/Resources/views/security/login.html.twig
+++ b/Site/app/Resources/views/security/login.html.twig
@@ -1,39 +1,132 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}" />
+{% endblock %}
+
 {% block body %}
 
-    <div id="pagewrap">
-        <div id="logo">
-            <img src="{{ asset('images/Logo.png') }}"/>
-        </div>
+    <form action="#">
+
         <header>
-            <h1>2 Column Responsive Layout</h1>
+            <h2>Example Responsive Form</h2>
+            <div>This form breaks at 600px and goes from a left-label form to a top-label form. At above 1200px, the labels align right.</div>
         </header>
 
-        <section id="content">
-            {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+        <div>
+            <label class="desc" id="title1" for="Field1">Full Name</label>
+            <div>
+                <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+            </div>
+        </div>
 
-            <form action="{{ path('login') }}" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <div>
+            <label class="desc" id="title3" for="Field3">
+                Email
+            </label>
+            <div>
+                <input id="Field3" name="Field3" type="email" spellcheck="false" value="" maxlength="255" tabindex="3">
+            </div>
+        </div>
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="_password" />
+        <div>
+            <label class="desc" id="title4" for="Field4">
+                Message
+            </label>
 
-                {#
-                    If you want to control the URL the user
-                    is redirected to on success (more details below)
-                    <input type="hidden" name="_target_path" value="/account" />
-                #}
+            <div>
+                <textarea id="Field4" name="Field4" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+            </div>
+        </div>
 
-                <button type="submit">login</button>
-            </form>
-        </section>
-    </div><!-- end-of-pagewrap -->
-    <footer>
-        <h4>Footer</h4>
-        <p>Footer text</p>
-    </footer>
+        <div>
+            <fieldset>
+
+                <legend id="title5" class="desc">
+                    Select a Choice
+                </legend>
+
+                <div>
+                    <input id="radioDefault_5" name="Field5" type="hidden" value="">
+                    <div>
+                        <input id="Field5_0" name="Field5" type="radio" value="First Choice" tabindex="5" checked="checked">
+                        <label class="choice" for="Field5_0">First Choice</label>
+                    </div>
+                    <div>
+                        <input id="Field5_1" name="Field5" type="radio" value="Second Choice" tabindex="6">
+                        <label class="choice" for="Field5_1">Second Choice</label>
+                    </div>
+                    <div>
+                        <input id="Field5_2" name="Field5" type="radio" value="Third Choice" tabindex="7">
+                        <label class="choice" for="Field5_2">Third Choice</label>
+                    </div>
+                </div>
+            </fieldset>
+        </div>
+
+        <div>
+            <fieldset>
+                <legend id="title6" class="desc">
+                    Check All That Apply
+                </legend>
+                <div>
+                    <div>
+                        <input id="Field6" name="Field6" type="checkbox" value="First Choice" tabindex="8">
+                        <label class="choice" for="Field6">First Choice</label>
+                    </div>
+                    <div>
+                        <input id="Field7" name="Field7" type="checkbox" value="Second Choice" tabindex="9">
+                        <label class="choice" for="Field7">Second Choice</label>
+                    </div>
+                    <div>
+                        <input id="Field8" name="Field8" type="checkbox" value="Third Choice" tabindex="10">
+                        <label class="choice" for="Field8">Third Choice</label>
+                        </span>
+                    </div>
+            </fieldset>
+        </div>
+
+        <div>
+            <label class="desc" id="title106" for="Field106">
+                Select a Choice
+            </label>
+            <div>
+                <select id="Field106" name="Field106" class="field select medium" tabindex="11">
+                    <option value="First Choice">First Choice</option>
+                    <option value="Second Choice">Second Choice</option>
+                    <option value="Third Choice">Third Choice</option>
+                </select>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <input id="saveForm" name="saveForm" type="submit" value="Submit">
+            </div>
+        </div>
+
+    </form>
+
+    <section id="content">
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+
+        <form action="{{ path('login') }}" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="_password" />
+
+            {#
+                If you want to control the URL the user
+                is redirected to on success (more details below)
+                <input type="hidden" name="_target_path" value="/account" />
+            #}
+
+            <button type="submit">login</button>
+        </form>
+    </section>
+
 {% endblock %}
