Modify login form design. CSS in form.css Remove old css file old_main.css

--- a/Site/app/Resources/views/base.html.twig
+++ b/Site/app/Resources/views/base.html.twig
@@ -57,7 +57,9 @@
             </nav>
         </header>
 
-        {% block body %}{% endblock %}
+        <div id="">
+            {% block body %}{% endblock %}
+        </div>
 
         <footer>
             <h4>Footer</h4>
