--- a/Site/web/css/grid.css
+++ b/Site/web/css/grid.css
@@ -26,7 +26,41 @@
     background-repeat: repeat;
 
     height: 150px;
+	
+	cursor: pointer;
+	
+	animation-name: fadeInUp;
+	letter-spacing: 0.1px;
+	transition:transform 0.3s ease;
 }
+
+.col:hover {    
+    transform:translate(0px, -5px)
+}
+
+@keyframes fadeInUp {
+	from {
+		opacity:0;
+		transform:translate3d(0, 100%, 0);
+	}
+	to {
+		opacity:1;
+		transform:none;
+	}
+}
+
+.box1 {	
+    animation-duration: 2s;
+}
+
+.box2 {
+	animation-duration: 3s;
+}
+
+.box3 {
+	animation-duration: 4s;
+}
+
 .col h2{
     position: relative;
     left: 10px;
