--- a/Site/app/Resources/views/Post/make.html.twig
+++ b/Site/app/Resources/views/Post/make.html.twig
@@ -1,23 +1,18 @@
 {# app/Resources/views/Post/make.html.twig #}
+{% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/form.css') }}" />
 {% endblock %}
 
-<div class="container" style = "width : 600px">
-    <form id="contact" action="/get_post.php" method="post">
-        <h3>Postare noua</h3>
-        <fieldset>
-            <input placeholder="Titlu propunere" name = "nume" type="text" tabindex="1" required autofocus>
-        </fieldset>
-        <fieldset>
-            <input placeholder="Categorie" name = "categorie" type="text" tabindex="2" required>
-        </fieldset>
-        <fieldset>
-            <textarea placeholder="Descriere" name = "descriere" tabindex="5" required></textarea>
-        </fieldset>
-        <fieldset>
-            <button name="Submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-        </fieldset>
-    </form>
-</div>
+{% block body %}
+    {% form_theme form 'forms/fields.html.twig' %}
+    <div class="container">
+        {{ form_start(form, { 'attr': {'id': 'contact'} }) }}
+        {{ form_row(form.nume, {'label': 'Nume'})  }}
+        {{ form_row(form.categorie, { 'label': 'Categorie' }) }}
+        {{ form_row(form.descriere) }}
+        <button type="submit">Posteaza!</button>
+        {{ form_end(form) }}
+    </div>
+{% endblock %}
