--- a/Site/app/Resources/views/default/index.html.twig
+++ b/Site/app/Resources/views/default/index.html.twig
@@ -1,16 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
-    {{ render(controller('AppBundle:Post:returnData', { 'postId': 2 })) }}
+    {{ render(controller('AppBundle:Post:returnDataAll', { 'postId': 2 })) }}
 {% endblock %}
