--- a/Site/web/css/grid.css
+++ b/Site/web/css/grid.css
@@ -104,6 +104,7 @@
 .col .status{
     margin-top: 15px;
     padding: 5px 10px 5px 10px;
+    width: 75px;
     background: #fd2800;
     color: #fff5f3;
     display:inline-block;
@@ -124,7 +125,7 @@
 .span_1_of_3 { width: 32.26%; }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 980px) {
     .col {  margin: 1% 0 1% 0%; padding: 0px; }
     .section { padding: 0px; }
     .span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
