--- a/Site/app/Resources/views/Post/upload.html.twig
+++ b/Site/app/Resources/views/Post/upload.html.twig
@@ -1,6 +1,6 @@
 <h1>Upload File</h1>
 
-<form action="#" method="post" {{ form_enctype(form) }}>
+<form action="#" method="post" enctype="multipart/form-data">
     {{ form_widget(form) }}
 
     <input type="submit" value="Upload Document" />
